--- a/templates/default/mysql-server/charsets.xml.erb
+++ b/templates/default/mysql-server/charsets.xml.erb
@@ -446,15 +446,15 @@ To make maintaining easier please:
   </collation>
 </charset>
 
-<charset name="utf8mb4">
+<charset name="utf8">
   <family>Unicode</family>
   <description>UTF-8 Unicode</description>
   <alias>utf-8</alias>
-  <collation name="utf8mb4_general_ci" id="33">
+  <collation name="utf8_general_ci" id="33">
    <flag>primary</flag>
    <flag>compiled</flag>
   </collation>
-  <collation name="utf8mb4_bin"        id="83">
+  <collation name="utf8_bin"        id="83">
     <flag>binary</flag>
     <flag>compiled</flag>
   </collation>
